* Fixed bug where the state of the leaderboard would "invert" - it would only be turned on when TAB WAS pressed.
	* Made leaderboard explicitly disable on keydown and explicitly enable on key up.
* Leaderboard updates every 1 second instead of 3
* You can now move while using the leaderboard by holding TAB

Version 0.04
March 10, 2024
* Changed menus to use new text system and colorised them.
* Rewrote credits code to use text system.
* New UI system uses modern text engine.
* Fixed Subway lighting.
* Fixed Subway skybox not existing on one side.
* The Bamfuslicator will now take into account distance from the target as well as from the player while spawning zombies. I need to test if this fixes spawning zombies inside of other players.
* Overhauled Bamfuslicator UI.
* Renamed Fast Zombies to Zombies on Speed.
* Added Planfuslicator icon.
* Added new aiflag: AI_WANDER
	* Wanders in a direction for a value (represented by the monsterinfo.wander_steps_total value) generated between edict monsterinfo.wander_steps_min and monsterinfo.wander_steps_max, before generating another random direction to wander.
		* Regular zombies now wander for 20 to 100 steps before changing direction.
		* Ogres now wander for 30 to 50 steps before changing direction.
		* Zombies on Speed now wander for 10 to 30 steps before changing direction.
* Added new entity func_trampoline for trampolines and things that send the player flying:
	* Keys:
		* jump_velocity - vertical velocity applied to the player on touch (may add horizontal)
		* dmg - Damage applied when the player touches the entity. You can also use a trigger_hurt but this is an easier way to do it.
	* Spawnflags:
		* 1 - Applies knockback to the player if damage is enabled (off by default to not interfere with the )
		* 8 - No Protection, same as a trigger_hurt.
* The Leaderboard now sorts scores.
* Removed conchars.tga and the old text system entirely.