@@ -87,13 +87,13 @@ extern int32_t num_cl_weaponmodels;
 
 typedef struct leaderboard_entry_s
 {
-	char		name[32];		// The player's name
+	char			name[32];		// The player's name
 	int32_t 		score;			// The player's score (kills - deaths)
-	common_team	team;			// The player's team
+	common_team		team;			// The player's team
 	int32_t 		ping;			// The user's ping
 	int32_t 		time;			// Time the player has spent in the game since they joined. 
-	bool	is_spectator;	// Is the player a spectator?
-	char		map_name[32];	// Map name
+	bool			is_spectator;	// Is the player a spectator?
+	char			map_name[32];	// Map name
 	int32_t 		time_remaining;		// Seconds of time left in game.
 } leaderboard_entry_t;
 
@@ -101,7 +101,7 @@ typedef struct leaderboard_entry_s
 typedef struct leaderboard_s
 {
 	int32_t 				num_clients;
-	leaderboard_entry_t	entries[MAX_CLIENTS];
+	leaderboard_entry_t		entries[MAX_CLIENTS];
 } leaderboard_t;
 
 //
@@ -110,47 +110,46 @@ typedef struct leaderboard_s
 //
 typedef struct client_state_s
 {
-	int32_t 	timeoutcount;
+	int32_t 		timeoutcount;
 
-	int32_t 	timedemo_frames;
-	int32_t 	timedemo_start;
+	int32_t 		timedemo_frames;
+	int32_t 		timedemo_start;
 
-	bool		refresh_prepped;	// false if on new level or new ref dll
-	bool		sound_prepped;		// ambient sounds can start
-	bool		force_refdef;		// vid has changed, so we can't use a paused refdef
+	bool			refresh_prepped;	// false if on new level or new ref dll
+	bool			sound_prepped;		// ambient sounds can start
+	bool			force_refdef;		// vid has changed, so we can't use a paused refdef
 
-	int32_t 	parse_entities;		// index (not anded off) into cl_parse_entities[]
+	int32_t 		parse_entities;		// index (not anded off) into cl_parse_entities[]
 
-	usercmd_t	cmd;
-	usercmd_t	cmds[CMD_BACKUP];	// each mesage will send several old cmds
-	int32_t 	cmd_time[CMD_BACKUP];	// time sent, for calculating pings
-	int16_t		predicted_origins[CMD_BACKUP][3];	// for debug comparing against server
+	usercmd_t		cmd;
+	usercmd_t		cmds[CMD_BACKUP];	// each mesage will send several old cmds
+	int32_t 		cmd_time[CMD_BACKUP];	// time sent, for calculating pings
+	int16_t			predicted_origins[CMD_BACKUP][3];	// for debug comparing against server
 
-	float		predicted_step;				// for stair up smoothing
-	uint32_t	predicted_step_time;
+	float			predicted_step;				// for stair up smoothing
+	uint32_t		predicted_step_time;
 
-	vec3_t		predicted_origin;	// generated by CL_PredictMovement
-	vec3_t		predicted_angles;
-	vec3_t		prediction_error;
+	vec3_t			predicted_origin;	// generated by CL_PredictMovement
+	vec3_t			predicted_angles;
+	vec3_t			prediction_error;
 
-	frame_t		frame;				// received from server
-	int32_t 	surpressCount;		// number of messages rate supressed
-	frame_t		frames[UPDATE_BACKUP];
+	frame_t			frame;				// received from server
+	frame_t			frames[UPDATE_BACKUP];
 
 	// the client maintains its own idea of view angles, which are
 	// sent to the server each frame.  It is cleared to 0 upon entering each level.
 	// the server sends a delta each frame which is added to the locally
 	// tracked view angles to account for standing on rotating objects,
 	// and teleport direction changes
-	vec3_t		viewangles;
+	vec3_t			viewangles;
 
 	int32_t 		time;			// this is the time value that the client
 								// is rendering at.  always <= cls.realtime
-	float		lerpfrac;		// between oldframe and frame
+	float			lerpfrac;		// between oldframe and frame
 
-	refdef_t	refdef;
+	refdef_t		refdef;
 
-	vec3_t		v_forward, v_right, v_up;	// set when refdef.angles is set
+	vec3_t			v_forward, v_right, v_up;	// set when refdef.angles is set
 
 	//
 	// transient data from server
@@ -163,12 +162,12 @@ typedef struct client_state_s
 	//
 	// server state information
 	//
-	bool	attractloop;		// running the attract loop, any key will menu
+	bool			attractloop;		// running the attract loop, any key will menu
 	int32_t 		servercount;		// server identification for prespawns
-	char		gamedir[MAX_QPATH];
+	char			gamedir[MAX_QPATH];
 	int32_t 		playernum;
 
-	char		configstrings[MAX_CONFIGSTRINGS][MAX_QPATH];
+	char			configstrings[MAX_CONFIGSTRINGS][MAX_QPATH];
 
 	//
 	// locally derived information from server state
@@ -217,38 +216,38 @@ typedef struct
 	connstate_t	state;
 	keydest_t	key_dest;
 
-	int32_t 		framecount;
-	int32_t 		realtime;			// always increasing, no clamping, etc
+	int32_t 	framecount;
+	int32_t 	realtime;			// always increasing, no clamping, etc
 	float		frametime;			// seconds since last frame
 
 // screen rendering information
 	float		disable_screen;		// showing loading plaque between levels
 									// or changing rendering dlls
 									// if time gets > 30 seconds ahead, break it
-	int32_t 		disable_servercount;	// when we receive a frame and cl.servercount
+	int32_t 	disable_servercount;	// when we receive a frame and cl.servercount
 									// > cls.disable_servercount, clear disable_screen
 
 // connection information
 	char		servername[MAX_OSPATH];	// name of server from original connect
 	float		connect_time;		// for connection retransmits
 
-	int32_t 		quakePort;			// a 16 bit value that allows quake servers
+	int32_t 	quakePort;			// a 16 bit value that allows quake servers
 									// to work around address translating routers
 	netchan_t	netchan;
-	int32_t 		serverProtocol;		// in case we are doing some kind of version hack
+	int32_t 	serverProtocol;		// in case we are doing some kind of version hack
 
-	int32_t 		challenge;			// from the server to use for connecting
+	int32_t 	challenge;			// from the server to use for connecting
 
 	FILE		*download;			// file transfer from server
 	char		downloadtempname[MAX_OSPATH];
 	char		downloadname[MAX_OSPATH];
-	int32_t 		downloadnumber;
+	int32_t 	downloadnumber;
 	dltype_t	downloadtype;
-	int32_t 		downloadpercent;
+	int32_t 	downloadpercent;
 
 // demo recording info must be here, so it isn't cleared on level change
-	bool	demorecording;
-	bool	demowaiting;	// don't record until a non-delta message is received
+	bool		demorecording;
+	bool		demowaiting;	// don't record until a non-delta message is received
 	FILE		*demofile;
 } client_static_t;
 
