@@ -112,7 +112,7 @@ set allow_download_sounds "1"
 set allow_download_models "1"
 set allow_download_players "1"
 set allow_download "1"
-set hostname "gomes"
+set hostname "Zombono Server"
 set gl_ext_palettedtexture "1"
 set gl_finish "0"
 set gl_particle_min_size "2"
@@ -142,7 +142,7 @@ set m_pitch "0.022"
 set hand "0"
 set cl_run "0"
 set crosshair "1"
-set sensitivity "3"
+set sensitivity "6"
 set win_noalttab "0"
 set vid_fullscreen "0"
 set viewsize "100"
